== master

* Release gems via rake-gemcutter instead of rubyforge

== 0.3.0 / 2009-04-30

* Improve permission lookup performance
* Introduce RolePermission as the join model between Roles and Permissions
* Replace acts_as_enumeration with enumerate_by
* Add dependency on Rails 2.3

== 0.2.0 / 2008-12-14

* Remove the PluginAWeek namespace

== 0.1.2 / 2008-10-26

* Fix permissions for new roles always defaulting to empty even when it's passed in to the constructor
* Add authorized?, authorized_required, and authorization_denied helpers
* Moved authorized_for? helper method into the controller so that it can be used there as well as in views
* Change how the base module is included to prevent namespacing conflicts

== 0.1.1 / 2008-06-22

* Remove log files from gems
* Index permission enumerations by their path

== 0.1.0 / 2008-05-05

* Add use of named_scope instead of class finders
* Moved storage of controller paths into the Permission model
* Permission and Role are now enumerations (adding dependency on acts_as_enumeration)
* Removed unused helper methods in Permission and Role
* Added default permissions / roles
* Update documentation

== 0.0.2 / 2007-09-26

* Fix role_assignments unique index having too long a name
* Add workaround for old sqlite versions that can't handle :distinct => true

== 0.0.1 / 2007-09-05

* Add #role_ids and #role_ids=(new_ids) for models
* Added documentation
* Added helper methods for determining authorization within views
* Added unit tests
* Convert dos newlines to unix newlines